--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 # testing
 /coverage
 
+#public
+/public/sw.js
+
 # next.js
 /.next/
 /out/
@@ -23,14 +26,18 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+yarn.lock
 
 # local env files
-.env*.local
+.env
+.env.local
+.env.test.local
+.env.production.local
+.env.development.local
+.env.development
+.env.production
+
+.htaccess
 
 # vercel
 .vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
