--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "animate.css": "^4.1.1",
+    "axios": "^1.3.5",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-inview": "^4.5.0",
     "typescript": "5.0.2"
   }
 }
